Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/self_initializer/T8024809/SelfInitializerInLambdaTestb.out
SelfInitializerInLambdaTestb.java:12:49: compiler.err.var.might.not.have.been.initialized: r1
SelfInitializerInLambdaTestb.java:15:37: compiler.err.var.might.not.have.been.initialized: r1
2 errors
